@@ -24,6 +24,7 @@
 - added `Icon` type to the Schemas
 - fixed `EACHSCHEMA()` method
 - improved schema types `Capitalize`, `Capitalize2` by adding a check for `XSS`
+- fixed a bad status code with the usage of `AUTH()` #22
 
 ========================
 0.0.44
